# AIOPs

./: .gitattributes  .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  render.yaml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_documents_chunks.py  0003_conversations_runs.py  0004_agent_tools.py  0005_eval.py
backend/app/: config.py  constants.py  db.py  deps.py  limits.py  main.py
backend/app/api/: agent.py  approvals.py  chat.py  demo.py  documents.py  eval.py  health.py  ops.py
backend/app/core/: answer.py  demo.py  storage.py
backend/app/core/agent/: loop.py
backend/app/models/: __init__.py  approval.py  chunk.py  conversation.py  document.py  escalation.py  eval_case.py  eval_run.py  message.py  order.py  run.py  run_step.py  workspace.py
backend/app/schemas/: agent.py  chat.py  document.py  eval.py
backend/app/tools/: base.py  create_escalation.py  kb_search.py  order_lookup.py  registry.py
backend/eval/: dataset.json
backend/eval/corpus/: account-management.md  billing-payments.md  contact-hours.md  gift-cards.md  membership-plans.md  order-tracking.md  password-reset.md  promo-codes.md  refunds.md  returns-exchanges.md  shipping-delivery.md  warranty.md
backend/tests/: conftest.py  test_agent_flow.py  test_answer.py  test_chat_api.py  test_chunker.py  test_demo_seed.py  test_documents_api.py  test_embedder.py  test_eval.py  test_health.py  test_llm_fake.py  test_ops_api.py  test_parsers.py  test_retrieval.py  test_rrf.py  test_tools.py
(+58 files in other folders)
