[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot-backend"
version = "0.1.0"
description = "AI Operations Copilot — backend API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "pgvector>=0.3.6",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-multipart>=0.0.9",
  "tenacity>=8.4",
  "slowapi>=0.1.9",
  "pypdf>=5.0",
  "selectolax>=0.3.21",
  "google-genai>=1.0",
  "groq>=0.13",
  "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom uses these callables in argument defaults.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Header", "fastapi.Body", "fastapi.File", "fastapi.Form"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
